--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "keywords": [
         "termux-whatsapp-bot",
         "whatsapp-bot",
-        "whatsapp"
+        "whatsapp",
         "js-whatsapp",
         "whatsapp",
         "ShiraoriBOT",
