--- a/package.json
+++ b/package.json
@@ -159,6 +159,19 @@
         "url-regex-safe": "^2.1.0",
         "wa-sticker-formatter": "^4.0.14",
         "yargs": "^17.2.1",
-        "yt-search": "^2.10.2"
+        "spotify":"^0.3.0",
+        "spotifydl-core":"^0.1.2",
+        "similarity": "^1.2.1",
+        "syntax-error": "^1.4.0",
+        "terminal-image": "^2.0.0",
+        "url-regex-safe": "^2.1.0",
+        "wa-sticker-formatter": "^4.2.0",
+        "node-gtts": "^2.0.2",
+        "spotify":"^0.3.0",
+        "waifu.pics":"^0.0.2",
+        "nana-api":"^1.1.4",
+        "nhentai":"^2.1.1",
+        "canvacord":"^5.2.3",
+        "yargs": "^17.2.1"
     }
 }
